--- a/WpfApp1.csproj
+++ b/WpfApp1.csproj
@@ -49,6 +49,7 @@
     <Reference Include="LiveCharts.Wpf, Version=0.9.7.0, Culture=neutral, PublicKeyToken=0bc1f845d1ebb8df, processorArchitecture=MSIL">
       <HintPath>..\packages\LiveCharts.Wpf.0.9.7\lib\net45\LiveCharts.Wpf.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
@@ -77,6 +78,10 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Animation\PageAnimation.cs" />
+    <Compile Include="CustomStockExportPage.xaml.cs">
+      <DependentUpon>CustomStockExportPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="CustomStockExportPageViewModel.cs" />
     <Compile Include="DatabaseDataStock.xaml.cs">
       <DependentUpon>DatabaseDataStock.xaml</DependentUpon>
     </Compile>
@@ -117,6 +122,10 @@
     </Compile>
     <Compile Include="User.cs" />
     <Compile Include="WebStockData.cs" />
+    <Page Include="CustomStockExportPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="DatabaseDataStock.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
